--- a/php/phalcon/Dockerfile
+++ b/php/phalcon/Dockerfile
@@ -9,11 +9,7 @@ RUN set -xe && \
         curl -LO https://github.com/phalcon/cphalcon/archive/v${PHALCON_VERSION}.tar.gz && \
         tar xzf v${PHALCON_VERSION}.tar.gz && cd cphalcon-${PHALCON_VERSION}/build && ./install && \
         echo "extension=phalcon.so" > /usr/local/etc/php/conf.d/phalcon.ini && \
-        cd ../.. && rm -rf v${PHALCON_VERSION}.tar.gz cphalcon-${PHALCON_VERSION}
-
-
-# Insall Phalcon Devtools, see https://github.com/phalcon/phalcon-devtools/
-# RUN set -xe && \
+        cd ../.. && rm -rf v${PHALCON_VERSION}.tar.gz cphalcon-${PHALCON_VERSION} && \
     curl -LO https://github.com/phalcon/phalcon-devtools/archive/v${PHALCON_VERSION}.tar.gz && \
     tar xzf v${PHALCON_VERSION}.tar.gz && \
     mv phalcon-devtools-${PHALCON_VERSION} /usr/local/phalcon-devtools && \
