Added PHPUnit and COdeception

--- a/php/phalcon/Dockerfile
+++ b/php/phalcon/Dockerfile
@@ -24,5 +24,7 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" &&
     mv composer.phar /usr/local/bin/composer
 
 #PHPUnit
+RUN wget https://phar.phpunit.de/phpunit.phar && chmod +x phpunit.phar && mv phpunit.phar /usr/local/bin/phpunit
 
-
+#Codeception
+RUN wget http://codeception.com/codecept.phar && chmod +x codecept.phar && mv codecept.phar /usr/local/bin/codecept
