--- a/php/cli/Dockerfile
+++ b/php/cli/Dockerfile
@@ -2,7 +2,7 @@ FROM php:5.6-alpine
 
 MAINTAINER Rafael Nery <rafael@nery.info>
 #dependencies
-RUN apk add --update postgresql-dev sqlite-dev mariadb-dev
+RUN apk add --update postgresql-dev sqlite-dev mariadb-dev && mkdir /app
 
 #Composer
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && php composer-setup.php && php -r "unlink('composer-setup.php');" && \
@@ -16,6 +16,6 @@ RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql pdo_sqlite
 
 #socket 
 EXPOSE 9000
-
+workdir "/app"
 #project
-VOLUME ["/var/www/html"]
+VOLUME ["/app"]
