--- a/php/cli/Dockerfile
+++ b/php/cli/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:5.6-alpine
 MAINTAINER Rafael Nery <rafael@nery.info>
 #dependencies
-RUN apk add --update postgresql-dev sqlite-dev mariadb-dev && mkdir /app
+RUN apk add --update postgresql-dev sqlite-dev mariadb-dev postgresql-client bash && mkdir /app
 
 #Composer && PHPUNI
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && php composer-setup.php && php -r "unlink('composer-setup.php');" && \
